--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ nav {
 .hero-image {
   position: relative;
   background-image: url('img/hero-image.png');
+  background-attachment: fixed;
   background-size: 100% 100%;
   height: 600px;
   margin-top: -60px;
@@ -119,6 +120,63 @@ nav {
 .main {
   padding-top: 7rem;
 }
+#about-us::after {
+  content: '';
+  clear: both;
+  display: table;
+}
+.about-tittle {
+  float: left;
+  width: 35%;
+}
+#about-us h1 {
+  margin-bottom: 10px;
+}
+#about-us hr {
+  width: 20%;
+  margin-bottom: 10px;
+}
+#about-us p {
+  font-size: 20px;
+}
+.about-image {
+  background-image: url('img/about-image.png');
+  background-size: 100% 100%;
+  height: 450px;
+  float: right;
+  width: 65%;
+  margin-top: -100px;
+}
+.about-image-content {
+  margin-top: 50px;
+  display: flex;
+  margin-bottom: 100px;
+}
+.content-1 {
+  width: 30%;
+  background-size: 100% 100%;
+  height: 200px;
+  background-image: url('img/content-1.png');
+}
+.content-2 {
+  width: 30%;
+  background-size: 100% 100%;
+  height: 200px;
+  background-image: url('img/content-2.png');
+}
+.content-3 {
+  width: 30%;
+  background-size: 100% 100%;
+  height: 200px;
+  background-image: url('img/content-3.png');
+}
+.content-4 {
+  width: 30%;
+  background-size: 100% 100%;
+  height: 200px;
+  background-image: url('img/content-4.png');
+}
+
 
 /* Lanjut Disini */
 
@@ -185,6 +243,26 @@ nav {
     cursor: pointer;
     color: #943f33;
   }
+  .about-tittle {
+    float: none;
+    width: 100%;
+  }
+  .about-image {
+    margin: 0;
+    float: none;
+    width: 100%;
+    height: 300px;
+  }
+  .about-image-content {
+    display: static;
+  }
+  .content-1,
+  .content-2,
+  .content-3,
+  .content-4 {
+    height: 300px;
+    width: 100%;
+  }
 }
 /* Animasi */
 @keyframes navbar {
@@ -214,3 +292,4 @@ nav {
 }
 
 /* #f6efef */
+/* #943f33 */
