--- a/style.css
+++ b/style.css
@@ -206,6 +206,8 @@ nav {
 .contents-item img {
   height: 225px;
   width: 162.5px;
+  margin-left: auto;
+  margin-right: auto;
   }
 .contents-item:hover img{
   opacity: 0.5;
@@ -215,8 +217,8 @@ nav {
   font-size: 10px;
   color: black;
   position: absolute;
-  top: 120px;
-  left: 75px;
+  top: 112.5px;
+  text-align: center;
   width: 100%;
   opacity: 0;
   }
