--- a/style.css
+++ b/style.css
@@ -191,11 +191,12 @@ nav {
 }
 .section-title p {
   font-size: 22px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .contents-item {
   float: left;
   width: 25%;
-  padding: 30px 45px;
   position: relative;
   transition: 0.3s;
 }
@@ -204,6 +205,7 @@ nav {
   cursor: pointer;
 }
 .contents-item img {
+  display: block;
   height: 225px;
   width: 162.5px;
   margin-left: auto;
