--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: 'Times New Roman', Times, serif;
-  /* Navbar */
 }
+  /* Navbar */
 nav {
   position: relative;
   padding: 30px 0;
@@ -178,7 +181,7 @@ nav {
 }
 
 
-/* Lanjut Disini */
+/* Products */
 .contents {
   height: 500px;
   margin-top: 10px;
@@ -230,6 +233,49 @@ opacity: 1;
 font-size: 20px;
 transition: 0.5s;
 }
+
+/* Lanjut Disini */
+
+
+/* Icon Back-top */
+.back-to-top {
+  text-align: center;
+  cursor: pointer;
+  display: block;
+  width: 60px;
+  height: 100px;
+  position: fixed;
+  z-index: 9999;
+  bottom: 50px;
+  right: 40px;
+  border-radius: 20px 20px 3px 3px;
+  opacity: 0.7;
+}
+.back-to-top a {
+  color: #943f33;
+  text-decoration: none;
+}
+.back-to-top p {
+  animation: backtop 1s infinite alternate-reverse;
+}
+.up-1 {
+  font-size: 40px;
+  animation: backtop 1s infinite alternate-reverse;
+  animation-delay: 1.1s;
+}
+.up-2 {
+  margin-top: -20px;
+  font-size: 35px;
+  animation: backtop 1s infinite alternate-reverse;
+  animation-delay: 0.8s;
+}
+.up-3 {
+  margin-top: -20px;
+  font-size: 30px;
+  animation: backtop 1s infinite alternate-reverse;
+  animation-delay: 0.5s;
+}
+
 /* Akhir Main */
 
 /* Responsive */
@@ -321,6 +367,10 @@ transition: 0.5s;
     height: 250px;
     width: 200px;
   }
+  
+  .back-to-top {
+    right: 20px;
+  }
 }
 /* Animasi */
 @keyframes navbar {
@@ -348,6 +398,13 @@ transition: 0.5s;
     opacity: 1;
   }
 }
-
+@keyframes backtop {
+  from {
+    color: #943f33;
+  }
+  to {
+    color: #f6efef;
+  }
+}
 /* #f6efef */
 /* #943f33 */
