Memperbaiki style.css
Merubah class fa menjadi fa-bars

--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ transition: 0.5s;
     font-size: 13px;
     margin-left: -40px;
   }
-  .fa {
+  .fa-bars {
     float: right;
     font-size: 30px;
     margin-right: 10px;
