--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav {
 /* Hero Image */
 .hero-image {
   position: relative;
-  background-image: url('img/hero-image.png');
+  background-image: url('img/hero-image.jpg');
   background-attachment: fixed;
   background-size: 100% 100%;
   height: 600px;
@@ -315,7 +315,7 @@ transition: 0.5s;
     margin-top: -15px;
   }
   .hero-image {
-    background-image: url('img/hero-image-mobile.png');
+    background-image: url('img/hero-image-mobile.jpg');
     margin-top: -150px;
   }
   .intro {
